--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-validator": "^3.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
