--- a/auth/package.json
+++ b/auth/package.json
@@ -10,12 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
     "body-parser": "^1.20.2",
+    "cookie-session": "^2.1.0",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "mongoose": "^8.3.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.8"
   }
 }
