--- a/auth/package.json
+++ b/auth/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ticketing-mircoservices/common": "^1.0.3",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
@@ -25,6 +34,12 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.8"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.8",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.2.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2"
   }
 }
