--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,11 +6,23 @@ build:
   artifacts:
     - image: narayanacharaya/auth
       context: auth
+      sync:
+        manual:
+          - dest: .
+            src: src/**/*.ts
       docker:
         dockerfile: Dockerfile
+    - image: narayanacharaya/tickets
+      context: tickets
+      sync:
+        manual:
+          - dest: .
+            src: src/**/*.ts
+      docker:
+        dockerfile: Dockerfile
+
 manifests:
   rawYaml:
     - infra/k8s/*
 deploy:
- kubectl: {}
-
+  kubectl: {}
