--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "ticketing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,12 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ticketing-mircoservices/common": "^1.0.3",
+    "@ticketing-mircoservices/common": "^1.0.4",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
@@ -32,7 +31,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "ts-node-dev": "^2.0.0",
-    "tsc-node": "^0.0.3",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
