--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -13,11 +13,17 @@ spec:
         app: auth
     spec:
       containers:
-      - name: auth
-        image: narayanacharaya/auth
+        - name: auth
+          image: narayanacharaya/auth
+          env:
+            - name: 'JWT_KEY'
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
-apiVersion: v1 
+apiVersion: v1
 kind: Service
 metadata:
   name: auth-srv
