--- a/infra/k8s/ticket-depl.yaml
+++ b/infra/k8s/ticket-depl.yaml
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: tickets
           image: narayanacharaya/tickets
+          env:
+            - name: 'JWT_KEY'
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 ---
 apiVersion: v1
